--- a/templates/results.html
+++ b/templates/results.html
@@ -11,10 +11,10 @@
   <title>Результаты</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/css/bootstrap.min.css" type="text/css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/simple-sidebar.css" rel="stylesheet">
+  <link href="/static/css/simple-sidebar.css" rel="stylesheet" >
 
 </head>
 
@@ -26,10 +26,10 @@
        <div class="bg-light border-right" id="sidebar-wrapper">
           <div class="sidebar-heading">Мегапарсер hh </div>
           <div class="list-group list-group-flush">
-            <a href="index.html" class="list-group-item list-group-item-action bg-light">Главная</a>
-            <a href="form.html" class="list-group-item list-group-item-action bg-light">Форма</a>
-            <a href="results.html" class="list-group-item list-group-item-action bg-light">Результаты</a>
-            <a href="contacts.html" class="list-group-item list-group-item-action bg-light">Контакты</a>
+            <a href="/" class="list-group-item list-group-item-action bg-light">Главная</a>
+            <a href="/run/" class="list-group-item list-group-item-action bg-light">Форма</a>
+
+            <a href="/contacts/" class="list-group-item list-group-item-action bg-light">Контакты</a>
           </div>
         </div>
     <!-- /#sidebar-wrapper -->
@@ -47,13 +47,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="results.html">Результаты</a>
-            </li>
+
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="form.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="/run/" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 Форма заполнения
               </a>
             </li>
@@ -64,50 +62,24 @@
       <div class="container-fluid">
         <h1 class="mt-4">Результаты поиска</h1>
           <hr>
-          <h4> Найдено 310 вакансий </h4>
+          <h4> Найдено {{vacancy}} вакансий </h4>
           <br>
-          <h4> Средняя зарплата по Москве 138826 руб. </h4>
+          <h4> Средняя зарплата специалистов {{QUESTIONS}} в {{CITY}} {{list_salary_mean}} руб. </h4>
           <table class="table table-bordered">
         <tr>
-            <th>Ключевые навыки</th>
-            <th>Количество требований</th>
+            <th>Ключевые навыки специалистов {{QUESTIONS}}</th>
+            <th>Количество встречающихся требований</th>
 
         </tr>
+            {% for item in key_skills[:10] %}
+
         <tr>
-            <td>Python</td>
-            <td>223</td>
+            <td>{{item[0]}}</td>
+            <td>{{item[1]}}</td>
 
         </tr>
-        <tr>
-            <td>SQL</td>
-            <td>74</td>
+            {% endfor %}
 
-        </tr>
-        <tr>
-            <td>Django Framework</td>
-            <td>72</td>
-
-        </tr>
-        <tr>
-            <td>PostgreSQL</td>
-            <td>72</td>
-        </tr>
-        <tr>
-            <td>Git</td>
-            <td>68</td>
-        </tr>
-          <tr>
-            <td>Linux</td>
-            <td>64</td>
-        </tr>
-          <tr>
-            <td>JavaScript</td>
-            <td>26</td>
-        </tr>
-          <tr>
-            <td>Flask</td>
-            <td>20</td>
-        </tr>
     </table>
       </div>
     </div>
