--- a/templates/forma.html
+++ b/templates/forma.html
@@ -60,14 +60,14 @@
       </nav>
 
       <div class="container-fluid">
-        <h1 class="mt-4">"{{text}}"</h1>
+        <h1 class="mt-4">{{text}}</h1>
         <hr>
         <form method="post" >
           <h5 class="mt-2">Введите должность</h5>
         <input class="form-group col-md-6" type  = "text" name="QUESTIONS" value="" placeholder="Python">
         <br>
         <br>
-          <h5 class="mt-2">Выберите регион</h5>
+          <h5 class="mt-2">Выберите город</h5>
         <select class="form-group col-md-6" name="CITY">
             <option value="Россия"> Россия </option>
             <option value="Москва"> Москва </option>
@@ -86,7 +86,6 @@
             <option value="Воронеж"> Воронеж </option>
         </select>
 
-<!--        <input type  = "text" name="CITY" value="" placeholder="Какая должность?">-->
         <br>
         <br>
         <input class="btn btn-info" type="submit" value="Искать">
