--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">Мегапарсер hh </div>
+      <div class="sidebar-heading">{{name}} </div>
       <div class="list-group list-group-flush">
         <a href="/" class="list-group-item list-group-item-action bg-light">Главная</a>
         <a href="/run/" class="list-group-item list-group-item-action bg-light">Форма</a>
@@ -60,7 +60,7 @@
       </nav>
 
       <div class="container-fluid">
-        <h1 class="mt-4">Мегапарсер вакансий с Head Hanter</h1>
+        <h1 class="mt-4">{{name}} вакансий с Head Hanter</h1>
         <p>Данный мегапарсер позволяет парсить данные о вакансиях с сайта hh.ru в зависимости от должности и региона.</p>
         <p>Вам надо только перейти на страницу заполнения формы и указать должность и выбрать регион.</p>
         <p>МегаПарсер выдаст информацию о количестве вакансий в данном городе, среднюю зарплату и ключевые навыки для данной должности.</p>
