--- a/templates/results.html
+++ b/templates/results.html
@@ -28,7 +28,7 @@
           <div class="list-group list-group-flush">
             <a href="/" class="list-group-item list-group-item-action bg-light">Главная</a>
             <a href="/run/" class="list-group-item list-group-item-action bg-light">Форма</a>
-
+            <a href="/runSQL/" class="list-group-item list-group-item-action bg-light">ФормаSQL</a>
             <a href="/contacts/" class="list-group-item list-group-item-action bg-light">Контакты</a>
           </div>
         </div>
