--- a/templates/resultsSQL.html
+++ b/templates/resultsSQL.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Главная</title>
+  <title>Результаты</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/static/css/bootstrap.min.css" type="text/css" rel="stylesheet">
@@ -23,16 +23,15 @@
   <div class="d-flex" id="wrapper">
 
     <!-- Sidebar -->
-    <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">{{name}} </div>
-      <div class="list-group list-group-flush">
-        <a href="/" class="list-group-item list-group-item-action bg-light">Главная</a>
-        <a href="/run/" class="list-group-item list-group-item-action bg-light">Форма</a>
-        <a href="/runSQL/" class="list-group-item list-group-item-action bg-light">ФормаSQL</a>
-
-        <a href="/contacts/" class="list-group-item list-group-item-action bg-light">Контакты</a>
-      </div>
-    </div>
+       <div class="bg-light border-right" id="sidebar-wrapper">
+          <div class="sidebar-heading">Мегапарсер hh </div>
+          <div class="list-group list-group-flush">
+            <a href="/" class="list-group-item list-group-item-action bg-light">Главная</a>
+            <a href="/run/" class="list-group-item list-group-item-action bg-light">Форма</a>
+            <a href="/runSQL/" class="list-group-item list-group-item-action bg-light">ФормаSQL</a>
+            <a href="/contacts/" class="list-group-item list-group-item-action bg-light">Контакты</a>
+          </div>
+        </div>
     <!-- /#sidebar-wrapper -->
 
     <!-- Page Content -->
@@ -51,8 +50,8 @@
               <a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="/run/" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="/run/" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 Форма заполнения
               </a>
             </li>
@@ -61,10 +60,22 @@
       </nav>
 
       <div class="container-fluid">
-        <h1 class="mt-4">{{name}} вакансий с Head Hanter</h1>
-        <p>Данный мегапарсер позволяет парсить данные о вакансиях с сайта hh.ru в зависимости от должности и региона.</p>
-        <p>Вам надо только перейти на страницу заполнения формы и указать должность и выбрать регион.</p>
-        <p>МегаПарсер выдаст информацию о количестве вакансий в данном городе, среднюю зарплату и ключевые навыки для данной должности.</p>
+        <h1 class="mt-4">Результаты поиска</h1>
+          <hr>
+          <table class="table table-bordered">
+        <tr>
+            <th>Ключевые навыки специалистов {{QUESTIONS}}  в городе {{CITY}} </th>
+
+        </tr>
+            {% for item in key_skills[:20] %}
+
+        <tr>
+            <td>{{item}}</td>
+
+        </tr>
+            {% endfor %}
+
+    </table>
       </div>
     </div>
     <!-- /#page-content-wrapper -->
