--- a/templates/forma.html
+++ b/templates/forma.html
@@ -29,6 +29,7 @@
         <a href="/" class="list-group-item list-group-item-action bg-light">Главная</a>
         <a href="/run/" class="list-group-item list-group-item-action bg-light">Форма</a>
         <a href="/runSQL/" class="list-group-item list-group-item-action bg-light">ФормаSQL</a>
+        <a href="/runSQLAlchemy/" class="list-group-item list-group-item-action bg-light">ФормаSQLAlchemy</a>
         <a href="/contacts/" class="list-group-item list-group-item-action bg-light">Контакты</a>
       </div>
     </div>
